package com.example.ffbfapp.model;

public class Review {
    //TODO
}
