@startuml

title __MODEL's Class Diagram__\n

  namespace com.example.ffbfapp {
    namespace model {
      class com.example.ffbfapp.model.Address {
          - addressHashMap : HashMap<String, String>
          - city : String
          - contactNo : String
          - county : String
          - emailAddress : String
          - postcode : String
          - street : String
          + Address()
          + Address()
          + addressToHashMap()
          + getCity()
          + getContactNo()
          + getCounty()
          + getEmailAddress()
          + getPostcode()
          + getStreet()
          + setCity()
          + setContactNo()
          + setCounty()
          + setEmailAddress()
          + setPostcode()
          + setStreet()
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      enum Cuisine {
        CHINESE
        FRENCH
        INDIAN
        ITALIAN
        JAPANESE
        MEDITERRANEAN
        MOROCCAN
        ROMANIAN
        SPANISH
        THAI
        label
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      class com.example.ffbfapp.model.DatePickerFragment {
          - onDateSetListener : OnDateSetListener
          + DatePickerFragment()
          + onCreateDialog()
          + onDateSet()
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      class com.example.ffbfapp.model.FoodVenue {
          - address : HashMap<String, String>
          - description : String
          - foodMenuReference : String
          - imageResourceReference : String
          - name : String
          - rating : double
          - reservationsReference : String
          - reviewsListReference : String
          - uid : String
          + FoodVenue()
          + FoodVenue()
          + getAddress()
          + getCuisine()
          + getDescription()
          + getFoodMenuReference()
          + getFoodVenueType()
          + getImageResourceReference()
          + getName()
          + getPriceTagValue()
          + getRating()
          + getReservationsReference()
          + getReviewsListReference()
          + getUid()
          + setAddress()
          + setCuisine()
          + setDescription()
          + setFoodMenuReference()
          + setFoodVenueType()
          + setImageResourceReference()
          + setName()
          + setPriceTagValue()
          + setRating()
          + setReservationsReference()
          + setReviewsListReference()
          + setUid()
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      enum FoodVenueType {
        R
        SF
        label
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      enum PriceTag {
        label
        £
        ££
        £££
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      enum Rating {
        FIVE
        FOUR
        NONE
        ONE
        THREE
        TWO
        label
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      class com.example.ffbfapp.model.Review {
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      class com.example.ffbfapp.model.TimePickerFragment {
          + TimePickerFragment()
          + onCreateDialog()
          + onTimeSet()
      }
    }
  }
  

  namespace com.example.ffbfapp {
    namespace model {
      class com.example.ffbfapp.model.User {
          + email : String
          + lastName : String
          + name : String
          ~ admin : boolean
          ~ critic : boolean
          + User()
          + User()
          + getEmail()
          + getFullName()
          + getLastName()
          + getName()
          + isAdmin()
          + isCritic()
          + setAdmin()
          + setCritic()
          + setEmail()
          + setLastName()
          + setName()
      }
    }
  }
  

  com.example.ffbfapp.model.DatePickerFragment .up.|> android.app.DatePickerDialog.OnDateSetListener
  com.example.ffbfapp.model.DatePickerFragment -up-|> androidx.fragment.app.DialogFragment
  com.example.ffbfapp.model.FoodVenue o-- com.example.ffbfapp.model.Cuisine : cuisine
  com.example.ffbfapp.model.FoodVenue o-- com.example.ffbfapp.model.FoodVenueType : foodVenueType
  com.example.ffbfapp.model.FoodVenue o-- com.example.ffbfapp.model.PriceTag : priceTagValue
  com.example.ffbfapp.model.TimePickerFragment .up.|> android.app.TimePickerDialog.OnTimeSetListener
  com.example.ffbfapp.model.TimePickerFragment -up-|> androidx.fragment.app.DialogFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
